   changes.  whatever flavor of service invocation your system is configured
   for, appdservice.sh <service> <action> should do the right thing.

3) a new document, PATCHING, now describes the best practices for managing
   system patching or system maintenance of an HA pair.

--------------------------------------
Release notes for version 3.42

1) A longstanding bug allowed replication from a broken secondary onto
   a good primary if the user tried to do so with the secondary database
   stopped.   This is now much more definitive.

2) a detailed analysis of the innodb file pruning code exposed an issue
   that sometimes did not detect when the primary and secondary files
   were not identical.   this caused the secondary database to either
   not start, or entered into a crash-restart loop.   the new pruner
   now calculates a sha1 of all the innodb file extent maps and insert 
   buffer bitmaps.  in combination with the payload in the file header,
   log sequence numbers, and so on, any stale files on the secondary will
   be detected and pruned before the rsync.

--------------------------------------
Release notes for version 3.43

1) Fixed 'Access denied' message in primary's database.log caused by watchdog.sh 
   failing to call mysqladmin ping via ssh. This issue only appears with v5.7
   MySQL.

2) Tidied up few small issues and enhanced some error messages to be easier to 
   self remediate.

--------------------------------------
Release notes for version 3.43.1

1) Fixed bug within replicate.sh -E facility to re-enable replication after primary 
   was turned off and assassin.sh had then disabled it upon finding it back up.
   Secondary DB will now be started.

--------------------------------------
Release notes for version 3.44

1) better descriptive message in replicate startup.

2) file map processing now checksums 32k at eof

3) improved the code in appdservice-noroot.sh to handle machine agent and server
   configuration.